--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ box-shadow: 0px 1px 6px 0px #2E2F4214, 0px 1px 1px 0px #2E2F4229, 0px 2px 1px 0p
 display: flex;
 align-items: center;
 }
+
 .nav{
 display: flex;
 align-items: center;
@@ -61,10 +62,22 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
+padding: 16px;
+display: block;
 }
 
 .logo-text{
 color: #2e2f42;
+}
+.burger-btn{
+margin-left: auto 0;
+padding: 0;
+border: none;
+background-color: transparent;
+}
+.burger-icon{
+display: block;
+fill: #2f2F37;
 }
 
 .nav-list{
@@ -74,448 +87,40 @@ letter-spacing: 0.02em;
 color: #2e2f42;
 padding: 24px 0;
 display: block;
-
 }
+.menu{
+/* display: flex; */
+display: none;
 
-.nav-list:hover, .nav-list:focus{
-color: #404bbf;
+/* gap: 40px; */
 }
-
-
-.address-list{
-display: flex;
-gap: 40px;
+.address{
+display: none;
 }
-.address-list-p{
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-h1{
-margin: auto;
-}
-
 address{
 font-style: normal;
 margin-left:auto
 }
+a{text-decoration: none;}
+@media only screen and (min-width: 768px) {
 
-.address-list-p{
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-padding: 24px 0;
-display: block;
+    .burger-btn{
+        display: none;
+    }
+    .menu{
+    display: flex;
+    gap: 40px;
+    }
+    .address{
+    display: block;
+    }
+    .nav{
+    display: flex;
+    }
+    
 }
-
-.address-list-p:hover, .address-list-p:focus{
-color: #404bbf;
-}
-
-.top{
-background-color: #2e2f42;
-padding: 188px 0;
-background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office.jpg); 
-max-width: 1440px;
-background-repeat: no-repeat;
-background-position: center; 
-background-size: cover;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
-margin-left: auto;
-margin-right: auto;
-}
-
-.topic{
-font-size: 56px;
-line-height: 1.07;
-text-align: center;
-letter-spacing: 0.02em;
-color: #ffffff;
-max-width: 496px;
-}
-
-.button{
-background-color: #4d5ae5;
-font-family: 'Roboto',sans-serif;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-color: #ffffff;
-cursor: pointer;
-display: block;
-min-width: 169px;
-height: 56px;
-border: none;
-background-color: #4d5ae5;
-border-radius: 4px;
-margin: auto;
-margin-top: 48px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button:hover,.button:focus{
-background-color: #404BBF;
-}
-
-.benefits-title{
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color: #2e2f42;
-margin-bottom: 8px;
-}
-
-.benefits-p{
-line-height: 1.5;
-letter-spacing: 0.02em;
-}
-
-.portfolio-title{
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color: #2e2f42;
-margin-bottom: 8px;
-}
-.portfolio-title-name{
-font-size: 36px;
-line-height: 1.11;
-text-align: center;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-color: #2e2f42;
-margin-bottom: 72px;
-}
-.portfolio-p{
-line-height: 1.5;
-letter-spacing: 0.02em;
-}
-
-.team{
-background-color: #F4F4FD;
-padding: 120px 0;
-}
-
-.team-title{
-font-size: 36px;
-line-height: 1.11;
-text-align: center;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-color: #2e2f42;
-margin-bottom:  72px;   
-}
-.team-title-name{
-font-weight: 500;
-font-style: Medium;
-font-size: 20px;
-line-height: 24px;
-letter-spacing: 2%;
-text-align: center;
-margin-bottom: 8px;
-}
-.team-p{
-line-height: 1.5;
-letter-spacing: 0.02em;
-margin-bottom: 8px;
-}
-
-.team-item{
-background-color: #ffffff;
-text-align: center;
-line-height: 1.5;
-letter-spacing: 0.02em;
-width: calc((100% - 72px) / 4);
-border-radius: 0px 0px 4px 4px;
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-a{
-text-decoration: none;
-}
-
 ul{
-list-style: none;
-}
-
-.logo-tex{
-color: #F4F4FD;
-}
-
-.footer{
-background-color: #2e2f42;
-}
-
-:root{
---main-text-color:#F4F4FD;
---main-background-color: #4d5ae5;
---footer-media-color: #FFFFFF;
---modal-p-color:#2E2F42 ;
---modal-label-color: #8e8f99;
---modal-accent:#404bbf;
---modal-link-color: #4d5ae5;
---modal-icon-color:#F4F4FD;
-}
-
-.footer-p{
-line-height: 1.5;
-color: var(--main-text-color);
-letter-spacing: 0.02em;
-max-width: 264px;
-}
-
-
-
-
-
-
-
-.header .logo{
-margin-right:  76px;
-}
-
-.menu{
-display: flex;
-gap: 40px;
-}
-.nav-list-studio{
-position: relative;
-color: #404bbf;
-transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-list-studio::after{
-content: "";
-width: 100%;
-height: 4px;
-left: 0;
-bottom: -1px;
-border-radius: 2px;
-background: #404BBF;
-position: absolute;
-}
-
-.center{
-padding: 120px 0;
-}
-
-.visually-hidden {
-position: absolute;
-width: 1px;
-height: 1px;
-margin: -1px;
-border: 0;
-padding: 0;
-white-space: nowrap;
-clip-path: inset(100%);
-clip: rect(0 0 0 0);
-overflow: hidden;
-}
-
-.center-list{
-display: flex;
-gap: 24px;
-}
-
-.center-list-item{
-width: calc((100% - 72px) / 4);
-}
-.center-list-item-div{
-display: flex;
-align-items: center;
-justify-content: center;
-height: 112px;
-background-color: #F4F4FD;
-border-radius: 4px;
-border: 1px solid #8e8f99;
-margin-bottom: 8px;
-}
-
-.team-list{
-display: flex;
-gap: 24px;
-}
-
-.team-item-div{
-padding: 32px 0;
-}
-
-.portfolio{
-padding: 120px 0;
-}
-
-.portfolio-list{
-display: flex;
-gap: 24px;
-row-gap: 48px;
-flex-wrap: wrap;
-}
-.portfolio-list-item:hover{
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.portfolio-list-item:hover  .overlay-p{
-transform: translateY(0%);
-}
-.overlay{
-position: relative;
-overflow: hidden;
-}
-
-.overlay-p{
-position: absolute;
-top: 0;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: var(--main-text-color);
-padding: 40px 32px;
-height: 100%;
-width: 100%;
-transform: translateY(100%);
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-background-color: #4d5ae5;
-}
-
-.portfolio-list-item{
-width: calc((100% - 48px) / 3);
-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.app-content{
-padding: 32px 16px;
-border: 1px solid #e7e9fc;
-border-top: none;
-
-}
-
-.footer{
-padding: 100px 0;
-
-}
-
-.footer .logo{
-display: inline-block;
-margin-bottom: 16px;
-}
-
-.media{
-display: flex;
-justify-content: center;
-gap: 24px;
-}
-.media-item{
-width: 40px;
-height: 40px;
-}
-.media-item-link{
-width: 100%;
-height: 100%;
-background-color: var(--main-background-color);
-border-radius: 50%;
-display: flex;
-justify-content: center;
-align-items: center;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-.media-item-link:hover,.media-item-link:focus{
-background-color: #404bbf;
-}
-footer .container{
-display: flex;
-align-items: baseline;
-}
-.logo-section{
-margin-right: 120px;
-}
-.social-media-p{
-
-font-weight: 500;
-font-size: 16px;
-line-height: 24px;
-letter-spacing: 0.02em;
-color: var(--footer-media-color);
-margin-bottom: 16px;
-}
-.media-item-link-footer{
-width: 100%;
-height: 100%;
-background-color: var(--main-background-color);
-border-radius: 50%;
-display: flex;
-justify-content: center;
-align-items: center;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.media-item-link-footer:hover,.media-item-link-footer:focus{
-background-color: #31d0aa;
-}
-.media-item-footer{
-width: 40px;
-height: 40px;
-gap: 16px;
-}
-.media-footer{
-display: flex;
-justify-content: center;
-gap: 16px;
-}
-
-.subscribe-p{
-margin-bottom: 16px;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #ffffff;
-}
-.footer-form{
-display: flex;
-gap: 24px;
-
-}
-.form-section{
-margin-left: auto;
-}
-.footer-input-mail{
-width: 264px;
-height: 40px;
-border: 1px solid #ffffff;
-background-color: transparent;
-font-size: 12px;
-line-height: 2;
-letter-spacing: 0.04em;
-padding-left: 16px;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
-color: #ffffff;
-}
-textarea::placeholder{
-color: gray;
-}
-.footer-submit{
-min-width: 165px;
-height: 40px;
-display: flex;
-justify-content: center;
-align-items: center;
-font-family: "Roboto",sans-serif;
-font-size: 16px;
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.04em;
-color: #ffffff;
-cursor: pointer;
-background-color: #4D5AE5;
-border: none;
-border-radius: 4px;
-}
-.footer-send-svg{
-margin-left: 16px;
-fill: #ffffff;
+list-style-type: none;
 }
 .backdrop{
 position: fixed;
@@ -698,4 +303,3 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 margin: 0 auto;
 border-radius: 4px;
 }
-
