--- a/css/styles1.css
+++ b/css/styles1.css
@@ -54,6 +54,7 @@ align-items: center;
 display: flex;
 align-items: center;
 }
+
 .logo{
 font-family: 'Raleway',sans-serif;
 font-weight: 700;
@@ -62,6 +63,8 @@ line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
+}
+.nav .logo{
 padding: 16px;
 display: block;
 }
@@ -97,17 +100,13 @@ display: none;
 .address{
 display: none;
 }
-address{
-font-style: normal;
+.address{
 margin-left:auto
 }
 .nav-list:hover, .nav-list:focus{
 color: #404bbf;
 }
-.address-list{
-display: flex;
-gap: 40px;
-}
+
 .address-list-p{
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -123,9 +122,6 @@ padding: 24px 0;
 display: block;
 }
 
-.address-list-p:hover, .address-list-p:focus{
-color: #404bbf;
-}
 
 .top{
 background-color: #2e2f42;
@@ -281,12 +277,6 @@ color: var(--main-text-color);
 letter-spacing: 0.02em;
 max-width: 264px;
 }
-
-
-
-
-
-
 
 .header .logo{
 margin-right:  76px;
@@ -711,5 +701,22 @@ border: none;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 margin: 0 auto;
 border-radius: 4px;
+}
+
+@media only screen and (min-width: 768px) {
+
+    .burger-btn{
+        display: none;
+    }
+    .menu{
+    display: flex;
+    gap: 40px;
+    }
+    .address{
+    display: block;
+    }
+    .nav{
+    display: flex;
+    }
 }
 
