--- a/css/styles.css
+++ b/css/styles.css
@@ -413,12 +413,164 @@ border-bottom: 40px;
 display: flex;
 flex-direction: column;
 height: 100%;
+width: 100%;
 }
-.mobile-menu-close{
+.mobile-menu-close {
 position: absolute;
 top: 24px;
 right: 24px;
+border-radius: 50%;
+border: 1px solid rgba(109, 109, 109,0.5);
+background-color: transparent;
+}
+:root{
+--main-text-color:#F4F4FD;
+--main-background-color: #4d5ae5;
+--footer-media-color: #FFFFFF;
+--modal-p-color:#2E2F42 ;
+--modal-label-color: #8e8f99;
+--modal-accent:#404bbf;
+--modal-link-color: #4d5ae5;
+--modal-icon-color:#F4F4FD;
+}
+.mobile-menu-close-icon {
+width: 24px;
+stroke: currentColor;
+fill: currentColor;
+height: 24px;
 }
 .mobile-menu-nav{
+display: block;
 margin-bottom: auto;
+width: 100%;
+}
+.mobile-menu-items{
+display: flex;
+flex-direction: column;
+align-items:flex-start;
+gap: 40px;
+}
+.mobile-menu-item.mobile-menu-studio{
+color: #404bbf;
+}
+.mobile-menu-item{
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11111;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+.mobile-menu-list{
+display: flex;
+align-items: flex-start;
+justify-content: flex-start;
+flex-direction: column;
+gap: 24px;
+}
+.mobile-address-list-p.mobile-menu-number{
+color: #4d5ae5;
+}
+.mobile-address-list-p{
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #434455;
+font-style: normal;
+}
+.mobile-menu-media{
+margin-top: 48px;
+display: flex;
+flex-direction: row;
+gap: 40px;
+padding-bottom: 40px;
+width: 100%;
+
+}
+.menu-media-item-link{
+width: 100%;
+height: 100%;
+background-color: var(--main-background-color);
+border-radius: 50%;
+display: flex;
+align-items: center;
+padding: 6px;
+}
+.mobile-menu-address{
+display: block;
+width: 100%;
+}
+
+/* top */
+.top{
+background: rgba(46, 47, 66, 0.7);
+background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/office.jpg); 
+max-width: 375px;
+background-repeat: no-repeat;
+background-position: center; 
+background-size: cover;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+margin-left: auto;
+margin-right: auto;
+padding: 72px 0;
+}
+.topic{
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-align: center;
+color: #fff;
+margin: 0 52px;
+}
+.button{
+background-color: #4d5ae5;
+font-family: 'Roboto',sans-serif;
+font-weight: 500;
+font-size: 16px;
+padding: 16px 32px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #ffffff;
+cursor: pointer;
+display: block;
+min-width: 169px;
+height: 56px;
+border: none;
+background-color: #4d5ae5;
+border-radius: 4px;
+margin: auto;
+margin-top: 48px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media only screen and (min-width: 768px) {
+.top {
+padding: 112px 0;
+max-width: 768px;
+}
+.topic{
+font-size: 56px;
+line-height: 1.1;
+letter-spacing: 0.02em;
+margin: 0 136px;
+width: 496px;
+}
+.button{
+margin-top: 36px;
+}
+}
+@media only screen and (min-width: 1440px) {
+.top {
+padding: 188px 0 292px 0;
+max-width: 1440px;
+}
+.topic{
+font-size: 56px;
+line-height: 1.1;
+letter-spacing: 0.02em;
+margin: 0 472px;
+}
+.button{
+margin-top: 48px;
+}
 }
