--- a/css/styles.css
+++ b/css/styles.css
@@ -574,10 +574,13 @@ margin: 0 472px;
 margin-top: 48px;
 }
 }
+/* center */
 .center-list{
 display: flex;
 flex-wrap: wrap;
 flex-direction: row;
+justify-content: center;
+align-items: center;
 gap: 72px;
 margin: 92px 0;
 }
@@ -613,9 +616,6 @@ width: calc((100% - 66px) / 2);
 }
 }
 @media only screen and (min-width: 1440px) {
-.center{
-padding: 120px 0;
-}
 .center-list-item-div{
 display: flex;
 align-items: center;
@@ -636,5 +636,96 @@ text-align: justify;
 }
 .benefits-p{
 font-weight: 400;
+}
+}
+
+/* team */
+
+.team-list{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+gap: 72px;
+margin: 0 12px 96px;
+background: #f4f4fd;
+align-items: center;
+justify-content: center;
+}
+.team{
+display: flex;
+background: #f4f4fd;
+}
+.team-title{
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-align: center;
+margin-top: 96px;
+margin-bottom: 72px;
+}
+.team-item{
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: column;
+gap: 32px;
+border-radius: 0 0 4px 4px;
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+background: #fff;
+}
+.team-title-name{
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+margin-bottom: 8px;
+}
+.team-p{
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #434455;
+margin-bottom:8px ;
+}
+.media{
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: row;
+gap: 24px;
+}
+.media-item{
+width: 40px;
+height: 40px;
+}
+.media-item-link{
+width: 100%;
+height: 100%;
+background-color: var(--main-background-color);
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.media-item-link:hover,.media-item-link:focus{
+background-color: #404bbf;
+}
+.team-item-div{
+padding-bottom: 32px;
+}
+@media only screen and (min-width: 768px) {
+.team-list{
+gap: 24px;
+}
+}
+@media only screen and (min-width: 768px) {
+.team-list{
+gap: 24px;
 }
 }
