--- a/css/styles.css
+++ b/css/styles.css
@@ -729,3 +729,87 @@ gap: 24px;
 gap: 24px;
 }
 }
+.portfolio-title-name{
+font-size: 36px;
+line-height: 1.11;
+text-align: center;
+letter-spacing: 0.02em;
+text-transform: capitalize;
+color: #2e2f42;
+margin-bottom: 72px;
+margin-top: 96px;
+}
+.portfolio-list{
+display: flex;
+flex-direction: row;
+gap: 72px;
+flex-wrap: wrap;
+margin-bottom: 96px;
+}
+.portfolio-list-item{
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.overlay{
+position: relative;
+overflow: hidden;
+}
+.portfolio-list-item:hover  .overlay-p,.portfolio-list-item:focus  .overlay-p{
+transform: translateY(0%);
+}
+.overlay-p{
+position: absolute;
+top: 0;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: var(--main-text-color);
+padding: 40px 32px;
+height: 100%;
+width: 100%;
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+background-color: #4d5ae5;
+}
+.app-content{
+padding: 32px 16px;
+border: 1px solid #e7e9fc;
+border-top: none;
+}
+.portfolio-title{
+font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+margin-bottom: 8px;
+}
+.portfolio-p{
+line-height: 1.5;
+letter-spacing: 0.02em;
+}
+@media only screen and (min-width: 768px) {
+.portfolio-list-item{
+width: calc((100% - 32px) / 2);
+}
+.portfolio-list{
+gap: 24px;
+row-gap: 72px;
+align-items: center;
+justify-content: center;
+}
+}
+@media only screen and (min-width: 1440px) {
+.portfolio-list{
+
+gap: 24px;
+row-gap: 48px;
+}
+.portfolio-list-item{
+box-shadow: none;
+width: calc((100% - 360px) / 3);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-list-item:hover,.portfolio-list-item:focus{
+box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+}
