--- a/css/styles.css
+++ b/css/styles.css
@@ -123,188 +123,6 @@ ul{
 list-style-type: none;
 }
 
-.backdrop{
-position: fixed;
-top: 0;
-left: 0;
-z-index: 3;
-width: 100%;
-height: 100%;
-background-color: rgba(46, 47, 66, 0.4);
-display: none;
-justify-content: center;
-align-items: center;
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.backdrop.is-open {
-display: flex;
-}
-
-.modal{
-position: absolute;
-top: 50%;
-left: 50%;
-width: 408px;
-min-height: 584px;
-background:#fcfcfc;
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); 
-border-radius: 4px;
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-padding: 72px 24px 24px 24px;
-transform: translate(-50%, -50%);
-}
-
-.close-button{
-position: absolute;
-top: 24px;
-right: 24px;
-width: 24px;
-height: 24px;
-border-radius: 50%;
-display: flex;
-align-items: center;
-justify-content: center;
-background-color: #e7e9fc;
-border: 1px solid rgba(0, 0, 0, 0.1);
-padding: 0;
-cursor: pointer;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.close-button:hover{
-background-color: #404bbf;
-border: none;
-}
-.close-button:focus{
-background-color: #404bbf;
-border: none;
-}
-.close-svg{
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.close-button:hover .close-svg{
-fill: #ffffff;
-}
-.close-button:focus .close-svg{
-fill: #ffffff;
-}
-.modal-p{
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-text-align: center;
-letter-spacing: 0.02em;
-color: var(--modal-p-color);
-margin-bottom: 16px;
-}
-.modal-form-field{
-margin-bottom: 8px;
-}
-.label-name{
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-color: var(--modal-label-color);
-display: block;
-margin-bottom: 4px;
-}
-.modal-input-sec{
-position: relative;
-}
-.modal-input{
-height: 40px;
-width: 100%;
-border: 1px solid rgba(46, 47, 66, 0.4);
-border-radius: 4px;
-background-color: transparent;
-padding-left: 38px;
-outline: transparent;
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-input:focus{
-border-color: #4D5AE5;
-}
-.modal-input-svg{
-position: absolute;
-left: 16px;
-top: 50%;
-transform: translateY(-50%);
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-input:focus + .modal-input-svg{
-fill: #4D5AE5;
-}
-.modal-form-textarea{
-margin-bottom: 16px;
-}
-.modal-textarea{
-width: 100%;
-height: 120px;
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-color: rgba(46, 47, 66, 0.4);
-border: 1px solid rgba(46, 47, 66, 0.4);
-border-radius: 4px;
-background-color: transparent;
-padding: 8px 16px;
-outline: transparent;
-resize: none;
-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-textarea:focus {
-border-color: #4D5AE5;
-}
-.modal-checkbox{
-margin-bottom: 24px;
-}
-
-.modal-check-label {
-font-size: 12px;
-line-height: 1.17;
-letter-spacing: 0.04em;
-color: var(--modal-label-color);
-}
-
-.check-box {
-margin-right: 8px;
-width: 16px;
-height: 16px;
-border: 1px solid rgba(46, 47, 66, 0.4);
-border-radius: 2px;
-display: inline-flex;
-align-items: center;
-justify-content: center;
-fill: transparent;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),border 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-input-span:checked + .modal-check-label > .check-box {
-background-color: #404bbf;;
-border: none;
-fill: #F4F4FD;
-}
-
-.modal-link {
-color: var(--modal-link-color);
-text-decoration: underline;
-}
-.modal-submit {
-display: block;
-min-width: 169px;
-height: 56px;
-font-size: 16px;
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.04em;
-color: #ffffff;
-cursor: pointer;
-background-color: #4d5ae5;
-border: none;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-margin: 0 auto;
-border-radius: 4px;
-}
-
 @media only screen and (min-width: 768px) {
 
     .burger-btn{
@@ -811,5 +629,399 @@ transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list-item:hover,.portfolio-list-item:focus{
 box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+}
+
+
+
+
+
+&::placeholder{
+font-weight: 400;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+color: #fff;
+}
+.footer .container
+{
+background: #2e2f42;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+gap: 72px;
+justify-content: center;
+align-items: center;
+}
+.footer-p{
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
+}
+.logo{
+font-weight: 700;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #4d5ae5;
+}
+
+.logo-tex{
+font-weight: 700;
+font-size: 18px;
+line-height: 1.17;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #f4f4fd;
+}
+
+.social-media-p{
+font-weight: 500;
+font-size: 16px;
+line-height: 24px;
+letter-spacing: 0.02em;
+color: var(--footer-media-color);
+margin-bottom: 16px;
+text-align: center;
+}
+
+.logo-section{
+margin-top: 96px;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
+}
+
+.media-footer{
+display: flex;
+justify-content: center;
+gap: 16px;
+}
+
+.media-item-link-footer{
+width: 100%;
+height: 100%;
+background-color: var(--main-background-color);
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.media-item-link-footer:hover,.media-item-link-footer:focus{
+background-color: #31d0aa;
+}
+.media-item-footer{
+width: 40px;
+height: 40px;
+}
+.subscribe-p{
+margin-bottom: 16px;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #ffffff;
+text-align: center;
+}
+.footer-input-mail{
+width: 288px;
+height: 40px;
+border: 1px solid #ffffff;
+background-color: transparent;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+padding-left: 16px;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+color: #ffffff;
+opacity: 0.3;
+margin-bottom: 16px;
+}
+.footer-submit{
+min-width: 165px;
+height: 40px;
+display: flex;
+justify-content: center;
+align-items: center;
+font-family: "Roboto",sans-serif;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #ffffff;
+cursor: pointer;
+background-color: #4D5AE5;
+border: none;
+border-radius: 4px;
+margin-left: 61px;
+
+}
+.footer-send-svg{
+fill: #ffffff;
+margin-left: 16px;
+}
+.form-section{
+margin-bottom:  96px;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
+}
+
+@media only screen and (min-width: 768px) {
+.footer .container{
+gap: 24px;
+row-gap: 72px;
+flex-direction: row;
+justify-content: flex-start;
+align-items: center;
+padding: 96px 108px 96px;
+}
+.social-media-p{
+text-align: left;
+}
+.logo-section a{
+margin-right: auto ;
+padding: 0;
+margin-bottom: 16px;
+margin-top: 32px;
+}
+
+.form-section{
+display: block;
+margin-bottom: 0;
+}
+.subscribe-p{
+text-align: left;
+}
+.footer-form{
+display: flex;
+gap: 24px;
+flex-direction: row;
+}
+.footer-submit{
+margin-left: 0;
+}
+.logo-section{
+width: 264px;
+margin-top: 0;
+height: 112px;
+}
+.footer-social-media{
+width: 208px;
+height: 80px;
+}
+.footer-input-mail{
+width: 264px;
+}
+}
+@media only screen and (min-width: 1440px) {
+.footer .container{
+gap: 80px;
+flex-direction: row;
+justify-content: flex-start;
+align-items: center;
+padding: 100px 159px 100px 156px;
+}
+}
+
+
+.backdrop{
+position: fixed;
+top: 0;
+left: 0;
+z-index: 3;
+width: 100%;
+height: 100%;
+background-color: rgba(46, 47, 66, 0.4);
+display: none;
+justify-content: center;
+align-items: center;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+display: flex;
+}
+
+.modal{
+position: absolute;
+top: 50%;
+left: 50%;
+width: 288px;
+min-height: 623px;
+background:#fcfcfc;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2); 
+border-radius: 4px;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding: 72px 16px 24px 16px;
+transform: translate(-50%, -50%);
+}
+
+.close-button{
+position: absolute;
+top: 24px;
+right: 24px;
+width: 24px;
+height: 24px;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
+background-color: #e7e9fc;
+border: 1px solid rgba(0, 0, 0, 0.1);
+padding: 0;
+cursor: pointer;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-button:hover{
+background-color: #404bbf;
+border: none;
+}
+.close-button:focus{
+background-color: #404bbf;
+border: none;
+}
+.close-svg{
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-button:hover .close-svg{
+fill: #ffffff;
+}
+.close-button:focus .close-svg{
+fill: #ffffff;
+}
+.modal-p{
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+text-align: center;
+letter-spacing: 0.02em;
+color: var(--modal-p-color);
+margin-bottom: 16px;
+}
+.modal-form-field{
+margin-bottom: 8px;
+}
+.label-name{
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: var(--modal-label-color);
+display: block;
+margin-bottom: 4px;
+}
+.modal-input-sec{
+position: relative;
+}
+.modal-input{
+height: 40px;
+width: 100%;
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+background-color: transparent;
+padding-left: 38px;
+outline: transparent;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus{
+border-color: #4D5AE5;
+}
+.modal-input-svg{
+position: absolute;
+left: 16px;
+top: 50%;
+transform: translateY(-50%);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus + .modal-input-svg{
+fill: #4D5AE5;
+}
+.modal-form-textarea{
+margin-bottom: 16px;
+}
+.modal-textarea{
+width: 100%;
+height: 120px;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: rgba(46, 47, 66, 0.4);
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 4px;
+background-color: transparent;
+padding: 8px 16px;
+outline: transparent;
+resize: none;
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-textarea:focus {
+border-color: #4D5AE5;
+}
+.modal-checkbox{
+margin-bottom: 24px;
+}
+
+.modal-check-label {
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: var(--modal-label-color);
+display: flex;
+align-items: center;
+
+}
+
+.check-box {
+flex-shrink: 0;
+margin-right: 8px;
+width: 16px;
+height: 16px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+border-radius: 2px;
+display: inline-flex;
+align-items: center;
+justify-content: center;
+fill: transparent;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),border 250ms cubic-bezier(0.4, 0, 0.2, 1),fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input-span:checked + .modal-check-label > .check-box {
+background-color: #404bbf;;
+border: none;
+fill: #F4F4FD;
+}
+
+.modal-link {
+color: var(--modal-link-color);
+text-decoration: underline;
+}
+.modal-submit {
+display: block;
+min-width: 169px;
+height: 56px;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #ffffff;
+cursor: pointer;
+background-color: #4d5ae5;
+border: none;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+margin: 0 auto;
+border-radius: 4px;
+}
+@media only screen and (min-width: 768px) {
+.modal{
+width: 408px;
+min-height: 584px;
+padding: 72px 24px 32px 24px;
 }
 }
