--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,7 @@ background-color: white;
 opacity: 0;
 visibility: hidden;
 pointer-events: none;
+z-index: 5;
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-menu.is-open{
@@ -457,7 +458,7 @@ width: calc((100% - 24px) / 2);
 }
 @media only screen and (min-width: 1158px) {
 .center{
-padding: 120px 156px;
+padding: 120px 0;
 }
 .center-list-item-div{
 display: flex;
@@ -496,7 +497,6 @@ align-items: center;
 justify-content: center;
 }
 .team{
-display: flex;
 background: #f4f4fd;
 }
 .team-title{
@@ -564,13 +564,7 @@ padding-bottom: 32px;
 }
 @media only screen and (min-width: 768px) {
 .team-list{
-gap: 24px;
-row-gap: 64px;
-}
-}
-@media only screen and (min-width: 768px) {
-.team-list{
-gap: 24px;
+gap: 64px 24px;
 }
 }
 .portfolio{
@@ -588,7 +582,7 @@ margin-bottom: 72px;
 .portfolio-list{
 display: flex;
 flex-direction: row;
-gap: 72px;
+gap: 48px;
 flex-wrap: wrap;
 }
 .portfolio-list-item{
@@ -809,7 +803,7 @@ gap: 24px;
 row-gap: 72px;
 flex-direction: row;
 justify-content: flex-start;
-align-items: center;
+align-items: baseline;
 padding: 0 96px;
 }
 .social-media-p{
@@ -1008,7 +1002,6 @@ letter-spacing: 0.04em;
 color: var(--modal-label-color);
 display: flex;
 align-items: center;
-
 }
 
 .check-box {
